--- a/_source/html/index.haml
+++ b/_source/html/index.haml
@@ -1,7 +1,7 @@
 !!! XML
 !!!
 %head
-    %title Subscripción
+    %title Subscription
     %meta{:name=>"viewport", :content=>"initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"}
     %link{:href=>"css/styles.css", :media=>"screen",  :rel=>"stylesheet"}
     %script{:src=>"js/mootor.js",:type=>"text/javascript"}
