Improvements on Nav.panels, fadeIn and fadeOut on Fx

--- a/_source/css/sass/styles.scss
+++ b/_source/css/sass/styles.scss
@@ -60,6 +60,11 @@ p {
 
 // Navigation
 
+#panels .panel {
+    -webkit-ransition-duration:0;
+	-webkit-transform:translate3d(0,0,0);
+}
+
 .nav a {
     font-size: 3em;
     color: $domColor1;
