--- a/_source/html/index.haml
+++ b/_source/html/index.haml
@@ -13,19 +13,20 @@
     #panels
 
         .panel#home
-            .nav#nav
-                %li
-                    %a{:href=>"", :rel=>"text"} Text
-                %li
-                    %a{:href=>"", :rel=>"geo"} Geo
-                %li
-                    %a{:href=>"", :rel=>"video"} Video
-                %li
-                    %a{:href=>"", :rel=>"audio"} Audio
-                %li
-                    %a{:href=>"", :rel=>"form"} Form
-                %li
-                    %a{:href=>"", :rel=>"graph"} Graph
+            %div
+                .nav#nav
+                    %li
+                        %a{:href=>"", :rel=>"text"} Text
+                    %li
+                        %a{:href=>"", :rel=>"geo"} Geo
+                    %li
+                        %a{:href=>"", :rel=>"video"} Video
+                    %li
+                        %a{:href=>"", :rel=>"audio"} Audio
+                    %li
+                        %a{:href=>"", :rel=>"form"} Form
+                    %li
+                        %a{:href=>"", :rel=>"graph"} Graph
 
         .panel#text
             %div
@@ -84,14 +85,15 @@
                     Mauris aliquam nunc a augue malesuada vel congue nunc cursus. Proin pellentesque diam iaculis sapien convallis ac sagittis sem feugiat. Ut ac iaculis neque. Curabitur vel felis non nisi rhoncus mollis suscipit quis nisi. Integer vitae augue at lorem pellentesque placerat. Donec ac nibh id massa malesuada adipiscing. Cras egestas, ligula eget tempor sagittis, metus arcu convallis orci, vehicula tempor arcu tortor quis dolor. Nullam facilisis iaculis magna sed suscipit.
 
         .panel#form
-            .subscribe
-                %h2 Form
-                %h3 Subscribe to receive news about this product!
-                %form.form#suscribeForm
-                    .field.text
-                        %input#fieldEmail{:type=>"text",:value=>"e-mail"}
-                    .action.subscribe
-                        %input#suscribeBtn{:type=>"submit",:value=>"Subscribe"} 
+            %div
+                .subscribe
+                    %h2 Form
+                    %h3 Subscribe to receive news about this product!
+                    %form.form#suscribeForm
+                        .field.text
+                            %input#fieldEmail{:type=>"text",:value=>"e-mail"}
+                        .action.subscribe
+                            %input#suscribeBtn{:type=>"submit",:value=>"Subscribe"} 
 
         .panel#graph
             %div
