--- a/_source/html/index.haml
+++ b/_source/html/index.haml
@@ -5,6 +5,7 @@
     %meta{:name=>"viewport", :content=>"initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"}
     %link{:href=>"css/styles.css", :media=>"screen",  :rel=>"stylesheet"}
     %script{:src=>"js/mootor.js",:type=>"text/javascript"}
+    %script{:src=>"js/dtype.js",:type=>"text/javascript"}
 %body.main
 
     #header
