--- a/_source/css/sass/styles.scss
+++ b/_source/css/sass/styles.scss
@@ -58,6 +58,27 @@ p {
   margin: 0 ;
 }
 
+// Header
+
+#header {
+    padding: 1.8em .8em;
+    text-align: left;
+    @include background(linear-gradient($domColor1C, $domColor1B)); 
+    border: 1px solid $domColor1B;
+    li a {
+        color: $subColor1;
+        border: 0;
+        font-size: 1.9em;
+        padding: .5em 1em;
+        width: auto;
+        display: inline;
+        @include background(linear-gradient(lighten($domColor1C, 5%), lighten($domColor1B, 5%))); 
+        @include border-radius(.2em);
+        @include box-shadow(0px 1px 1px rgba(0,0,0,.2));
+    }
+    // @include box-shadow(0px 2px 2px rgba(0,0,0,.2));
+}
+
 // Navigation
 
 #panels .panel {
