--- a/_source/css/sass/_layout.scss
+++ b/_source/css/sass/_layout.scss
@@ -31,11 +31,11 @@ h3 {
 
 // Navigation
 
-.nav {
+nav {
     list-style-type: none;
 }
 
-.nav a {
+nav a {
     text-decoration: none;
     text-align: left;
     display: block;
