--- a/_source/html/index.haml
+++ b/_source/html/index.haml
@@ -96,7 +96,8 @@
            panels.panels({
                 header_id: "header",
                 panel_class: "panel",
-                nav_class: "nav"
+                nav_class: "nav",
+                hidden_class: "hidden"
            });
                       
            // Show location map
