--- a/_source/css/sass/styles.scss
+++ b/_source/css/sass/styles.scss
@@ -19,6 +19,10 @@ a:focus {
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0); 
 }
 
+.nav.active {
+    @include background(linear-gradient($empColor2, $empColor2B)); 
+}
+
 #panels,
 body {
   background: $bodyColor; 
