--- a/_source/css/sass/styles.scss
+++ b/_source/css/sass/styles.scss
@@ -21,6 +21,7 @@ a:focus {
 
 .nav.active {
     @include background(linear-gradient($empColor2, $empColor2B)); 
+    color: $subColor1;
 }
 
 #panels,
