--- a/_demo/index.haml
+++ b/_demo/index.haml
@@ -1,7 +1,7 @@
 !!! XML
 !!!
 %head
-    %title Todo Macram&eacute;
+    %title Demo app
     %meta{:name=>"viewport", :content=>"initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"}
     %link{:href=>"../css/styles.css", :media=>"screen",  :rel=>"stylesheet"}
     %link{:href=>"css/styles.css", :media=>"screen",  :rel=>"stylesheet"}
@@ -77,7 +77,7 @@
        $(document).ready(function(){
        
            $("#panels").panels({
-                width: "400",
+                width: 400,
                 navmain:  $("#sidebar").el
            })
                      
