HTML demo update.

--- a/_source/html/index.haml
+++ b/_source/html/index.haml
@@ -1,7 +1,7 @@
 !!! XML
 !!!
 %head
-    %title Subscription
+    %title Mootor demo
     %meta{:name=>"viewport", :content=>"initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"}
     %link{:href=>"css/styles.css", :media=>"screen",  :rel=>"stylesheet"}
     %script{:src=>"js/mootor.js",:type=>"text/javascript"}
@@ -40,10 +40,8 @@
 
         .panel#video
             %h2 Video
-            %h3 This module is not activated.
             .hidden
-                / <iframe src="http://player.vimeo.com/video/35820201?title=0&amp;byline=0&amp;portrait=0&amp;autoplay=0" width="400" height="225" frameborder="0" webkitAllowFullScreen allowFullScreen></iframe>
-
+                <iframe class="youtube-player" type="text/html" width="320" height="200" src="http://www.youtube.com/embed/mzPxo7Y6JyA" frameborder="0"></iframe>
         .panel#carousel
             %h2 Carousel
             %h3 This module is not implemented yet.
