--- a/_source/html/index.haml
+++ b/_source/html/index.haml
@@ -5,7 +5,7 @@
     %meta{:name=>"viewport", :content=>"initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"}
     %link{:href=>"css/styles.css", :media=>"screen",  :rel=>"stylesheet"}
     %script{:src=>"js/mootor.js",:type=>"text/javascript"}
-    %script{:src=>"js/dtype.js",:type=>"text/javascript"}
+    %script{:src=>"js/type.js",:type=>"text/javascript"}
     %script{:src=>"js/geo.js",:type=>"text/javascript"}
     %script{:src=>"http://maps.google.com/maps/api/js?sensor=false",:type=>"text/javascript"}
 %body.main
@@ -41,7 +41,7 @@
         .panel#video
             %h2 Video
             .hidden
-                <iframe class="youtube-player" type="text/html" width="320" height="200" src="http://www.youtube.com/embed/mzPxo7Y6JyA" frameborder="0"></iframe>
+                / <iframe class="youtube-player" type="text/html" width="320" height="200" src="http://www.youtube.com/embed/mzPxo7Y6JyA" frameborder="0"></iframe>
         .panel#carousel
             %h2 Carousel
             %h3 This module is not implemented yet.
