--- a/_source/html/index.haml
+++ b/_source/html/index.haml
@@ -6,8 +6,8 @@
     %link{:href=>"css/styles.css", :media=>"screen",  :rel=>"stylesheet"}
     %script{:src=>"js/mootor.js",:type=>"text/javascript"}
     %script{:src=>"js/type.js",:type=>"text/javascript"}
-    %script{:src=>"js/geo.js",:type=>"text/javascript"}
-    %script{:src=>"http://maps.google.com/maps/api/js?sensor=false",:type=>"text/javascript"}
+    / %script{:src=>"js/geo.js",:type=>"text/javascript"}
+    / %script{:src=>"http://maps.google.com/maps/api/js?sensor=false",:type=>"text/javascript"}
 %body.main
 
     #header
@@ -99,7 +99,7 @@
            });
                       
            // Show location map
-           $("#map").map();
+           // $("#map").map();
 
        });
 
