Fixes, Geo plugin temporary disabled.

--- a/_source/html/index.haml
+++ b/_source/html/index.haml
@@ -36,7 +36,9 @@
                 Mauris feugiat aliquam erat vitae faucibus. Donec in semper felis. Nam aliquet fermentum porta. Morbi imperdiet orci at justo sagittis egestas. Phasellus vel pharetra quam. Vestibulum volutpat nisi sit amet mi blandit vitae commodo dui posuere. Mauris augue est, semper a tempus vitae, vulputate non odio. Quisque tincidunt, dolor at commodo ornare, nisl risus tristique dolor, non imperdiet libero ligula vel magna. Nullam id massa neque. Maecenas porttitor dignissim massa, nec euismod augue scelerisque nec. Nam commodo eleifend lacinia. Nullam at tincidunt est. Donec pellentesque convallis arcu et molestie. Cras ultrices sem non risus sagittis sed pellentesque quam sodales. Phasellus dui justo, lobortis eu hendrerit sit amet, faucibus non nisl. Ut non lectus metus, nec gravida orci.
 
         .panel#geo
-            #map.hidden  
+            %h2 Geo
+            %h3 This module is not enabled.
+            / #map.hidden  
 
         .panel#video
             %h2 Video
@@ -99,7 +101,7 @@
            });
                       
            // Show location map
-           // $("#map").map();
+           $("#map").map();
 
        });
 
