Geo module temporary disabled.

--- a/_source/html/index.haml
+++ b/_source/html/index.haml
@@ -101,7 +101,7 @@
            });
                       
            // Show location map
-           $("#map").map();
+           // $("#map").map();
 
        });
 
