--- a/_source/html/index.haml
+++ b/_source/html/index.haml
@@ -6,8 +6,8 @@
     %link{:href=>"css/styles.css", :media=>"screen",  :rel=>"stylesheet"}
     %script{:src=>"js/mootor.js",:type=>"text/javascript"}
     %script{:src=>"js/type.js",:type=>"text/javascript"}
-    / %script{:src=>"js/geo.js",:type=>"text/javascript"}
-    / %script{:src=>"http://maps.google.com/maps/api/js?sensor=false",:type=>"text/javascript"}
+    %script{:src=>"http://maps.google.com/maps/api/js?sensor=false",:type=>"text/javascript"}
+    %script{:src=>"js/geo.js",:type=>"text/javascript"}
 %body.main
 
     #header
@@ -48,9 +48,7 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dictum lobortis erat, vel facilisis massa facilisis non. Sed condimentum massa vitae augue tincidunt id ornare sapien congue. Maecenas pulvinar faucibus lorem. Sed tempus, sem gravida tempus malesuada, lacus lectus lacinia libero, id venenatis eros sapien et nunc. Cras quis urna mauris, non auctor risus. Suspendisse non magna augue, in elementum augue. Donec tincidunt sodales imperdiet. Ut pharetra, nunc in pretium rutrum, eros velit rhoncus est, nec faucibus ante arcu vitae enim. Nam sit amet nulla in risus blandit aliquet. Quisque rutrum accumsan volutpat.
 
         .panel#geo
-            %h2 Geo
-            %h3 This module is not enabled.
-            / #map.hidden  
+            #map.hidden  
 
         .panel#video
             %h2 Video
@@ -98,17 +96,18 @@
 
        $(document).ready(function(){
        
-           // Cache query
-           var panels = $("#panels");
-
            // Dynamic font size
-           panels.type.autoSize();
+           $("#panels").type.autoSize();
 
            // Navigation panels
-           panels.nav();
-                      
+           var nav = $("#panels").nav();
+            
            // Show location map
-           // $("#map").map();
+           $("#map").map();
+           nav.config({
+                panel: "geo",
+                movable: false
+           });
  
        });
 
