Restore Geo demo.

--- a/_source/html/index.haml
+++ b/_source/html/index.haml
@@ -52,8 +52,8 @@
 
         .panel#video
             %h2 Video
-            .hidden
-                / <iframe class="youtube-player" type="text/html" width="320" height="200" src="http://www.youtube.com/embed/mzPxo7Y6JyA" frameborder="0"></iframe>
+            %h3 This module is not implemented yet.
+            
         .panel#carousel
             %h2 Carousel
             %h3 This module is not implemented yet.
