--- a/_source/html/index.haml
+++ b/_source/html/index.haml
@@ -6,8 +6,9 @@
     %link{:href=>"css/styles.css", :media=>"screen",  :rel=>"stylesheet"}
     %script{:src=>"js/mootor.js",:type=>"text/javascript"}
     %script{:src=>"js/type.js",:type=>"text/javascript"}
-    %script{:src=>"http://maps.google.com/maps/api/js?sensor=false",:type=>"text/javascript"}
-    %script{:src=>"js/geo.js",:type=>"text/javascript"}
+    %script{:src=>"js/ui.js",:type=>"text/javascript"}
+    / %script{:src=>"http://maps.google.com/maps/api/js?sensor=false",:type=>"text/javascript"}
+    / %script{:src=>"js/geo.js",:type=>"text/javascript"}
 %body.main
 
     #header
@@ -30,7 +31,6 @@
             %nav
                 %a.nav{:href=>"", :rel=>"item1"} Item 1
                 %a.nav{:href=>"", :rel=>"item2"} Item 2
-                %a.nav{:href=>"", :rel=>"item3"} Item 3
 
         .panel#item1
             %h2 Item 1
@@ -42,20 +42,16 @@
             %p
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dictum lobortis erat, vel facilisis massa facilisis non. Sed condimentum massa vitae augue tincidunt id ornare sapien congue. Maecenas pulvinar faucibus lorem. Sed tempus, sem gravida tempus malesuada, lacus lectus lacinia libero, id venenatis eros sapien et nunc. Cras quis urna mauris, non auctor risus. Suspendisse non magna augue, in elementum augue. Donec tincidunt sodales imperdiet. Ut pharetra, nunc in pretium rutrum, eros velit rhoncus est, nec faucibus ante arcu vitae enim. Nam sit amet nulla in risus blandit aliquet. Quisque rutrum accumsan volutpat.
 
-        .panel#item3
-            %nav
-                %a.nav{:href=>"", :rel=>"item4"} Item 4
-
-        .panel#item4
-            %h2 Item 4
-            %p
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dictum lobortis erat, vel facilisis massa facilisis non. Sed condimentum massa vitae augue tincidunt id ornare sapien congue. Maecenas pulvinar faucibus lorem. Sed tempus, sem gravida tempus malesuada, lacus lectus lacinia libero, id venenatis eros sapien et nunc. Cras quis urna mauris, non auctor risus. Suspendisse non magna augue, in elementum augue. Donec tincidunt sodales imperdiet. Ut pharetra, nunc in pretium rutrum, eros velit rhoncus est, nec faucibus ante arcu vitae enim. Nam sit amet nulla in risus blandit aliquet. Quisque rutrum accumsan volutpat.
-
         .panel#ui
-            %h2 UI
-            %h3 This module is not implemented yet.
+            %h2 User Interface
+            %form#uiform{:action=>"", :method=>"post"}
+                .field#checkbox1
+                    %input{:type=>"checkbox", :value=>"0"}
+                    %label Input checkbox
             
         .panel#geo
+            %h2 Geo
+            %h3 This module is not enabled.
             #map.hidden  
 
         .panel#data
@@ -99,7 +95,11 @@
 
            // Navigation panels
            var nav = $("#panels").nav();
+           
+           // Checkbox
+           var check = $("#checkbox1").checkbox();
             
+           /*
            // Block panel movement
            nav.config({
                 panel: "geo",
@@ -108,7 +108,7 @@
 
            // Show location map
            $("#map").map();
-           
+           */
  
        });
 
