--- a/_source/css/sass/_colors.scss
+++ b/_source/css/sass/_colors.scss
@@ -2,26 +2,26 @@
 
 // Dominants
 
-$domColor1: #000;     // negro
-$domColor1B: #333;    // gris
-$domColor1C: #666;    // gris claro
+$domColor1: #000;              // black
+$domColor1B: #333;            // grey
+$domColor1C: #666;            // light gray
 
 // Subordinated
 
-$subColor1: #fff;     // blanco
-$subColor1B: #f7f7f7; // gris claro
-$subColor2: #7BBED6;  // celeste
-$subColor3: #F7D77B;  // amarillo
-$subColor4: #EFDFCE;  // amarillo claro
+$subColor1: #fff;                  // white
+$subColor1B: #f7f7f7;          // light gray
+$subColor2: #7BBED6;         // light blue
+$subColor3: #F7D77B;         // yellow
+$subColor4: #EFDFCE;         // light yellow
 
 // Emphasis
 
-$empColor1: #FF3031;  // rojo claro
-$empColor1B: #911E17; // rojo
-$empColor2: #5FBCF9;  // celeste claro
-$empColor2B: #29A6F7; // celeste
+$empColor1: #FF3031;        // light red
+$empColor1B: #911E17;      // red
+$empColor2: #5FBCF9;        // lighter blue
+$empColor2B: #29A6F7;      // light blue
 
 // System
 
-$bodyColor: #333;
+$bodyColor: #333;              // gray
 
