Mootor.UI - Switch control implementation
- Functional switch control
- Basic styles & sample image

--- a/_source/css/sass/_colors.scss
+++ b/_source/css/sass/_colors.scss
@@ -9,7 +9,8 @@ $domColor1C: #666;            // light gray
 // Subordinated
 
 $subColor1: #fff;                  // white
-$subColor1B: #f7f7f7;          // light gray
+$subColor1B: #f7f7f7;          // lighter gray
+$subColor1C: #ddd   ;          // light gray
 $subColor2: #7BBED6;         // light blue
 $subColor3: #F7D77B;         // yellow
 $subColor4: #EFDFCE;         // light yellow
