--- a/_source/css/sass/styles.scss
+++ b/_source/css/sass/styles.scss
@@ -65,9 +65,9 @@ body {
 nav a {
     font-size: 3em;
     color: $domColor1;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid  $subColor1B;
     background: $subColor1B;
-    border-top: 1px solid $subColor1;
+    border-top: 1px solid $subColor1C;
 }
 
 .nav.active {
@@ -82,3 +82,19 @@ nav a {
     width: 100% ;
     height: 100% ;
 }
+
+// UI
+
+.stdform {
+    width: 100%;
+    text-align: center;
+    background: $subColor1;
+    border: 1px solid $subColor1C;
+    padding: 2%;
+    width: 90%;
+    margin: 0 auto;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+
