Fixes. UI switch
- Initial state
- Update input

--- a/_source/html/index.haml
+++ b/_source/html/index.haml
@@ -32,7 +32,7 @@
             .hidden
                 %form#uiform.stdform{:action=>"", :method=>"post"}
                     .field#checkbox1
-                        %input#check1{:type=>"checkbox", :name=>"checkbox1" ,:value=>"0", :checked=>"true"}
+                        %input#check1{:type=>"checkbox", :name=>"checkbox1" ,:value=>"0"}
                         %label Input checkbox
 
         .panel#nav
