--- a/_source/html/index.haml
+++ b/_source/html/index.haml
@@ -8,8 +8,7 @@
     %script{:src=>"js/type.js",:type=>"text/javascript"}
     %script{:src=>"js/ui.js",:type=>"text/javascript"}
     %script{:src=>"js/nav.js",:type=>"text/javascript"}
-    / %script{:src=>"http://maps.google.com/maps/api/js?sensor=false",:type=>"text/javascript"}
-    / %script{:src=>"js/geo.js",:type=>"text/javascript"}
+    %script{:src=>"js/geo.js",:type=>"text/javascript"}
 %body.main
 
     #header
@@ -23,7 +22,7 @@
             %nav
                 %a.nav{:href=>"", :rel=>"nav"} Nav
                 %a.nav{:href=>"", :rel=>"ui"} UI
-                %a.nav{:href=>"", :rel=>"geo"} Geo
+                %a.nav{:href=>"", :rel=>"geolocalization"} Geolocalization
                 %a.nav{:href=>"", :rel=>"data"} Data
                 %a.nav{:href=>"", :rel=>"graph"} Graph
                 %a.nav{:href=>"", :rel=>"carousel"} Carousel
@@ -51,10 +50,12 @@
             %p
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dictum lobortis erat, vel facilisis massa facilisis non. Sed condimentum massa vitae augue tincidunt id ornare sapien congue. Maecenas pulvinar faucibus lorem. Sed tempus, sem gravida tempus malesuada, lacus lectus lacinia libero, id venenatis eros sapien et nunc. Cras quis urna mauris, non auctor risus. Suspendisse non magna augue, in elementum augue. Donec tincidunt sodales imperdiet. Ut pharetra, nunc in pretium rutrum, eros velit rhoncus est, nec faucibus ante arcu vitae enim. Nam sit amet nulla in risus blandit aliquet. Quisque rutrum accumsan volutpat.
             
-        .panel#geo
-            %h2 Geo
-            %h3 This module is not enabled.
-            #map.hidden  
+        .panel#geolocalization
+            %h2 Geolocalization
+            #location 
+            %h3#msg
+            #error
+            #map.hidden
 
         .panel#data
             %h2 Data
@@ -101,16 +102,18 @@
            // Checkbox
            var check = $("#checkbox1").checkbox();
             
-           /*
-           // Block panel movement
-           nav.config({
-                panel: "geo",
-                movable: false
+           // Show location map
+           $("#location").location({
+                error: "error",
+                msg: "msg",
+                msgLoading: "<p>Wait please ...</p>",
+                msgFound: "",
+                map: "map",
+                // Sample data
+                dataNearby:  "data/sample.xml",
+                msgNearby: 'The near point is: $info ($distance km)'
            });
 
-           // Show location map
-           $("#map").map();
-           */
  
        });
 
