--- a/_source/css/sass/_ui.scss
+++ b/_source/css/sass/_ui.scss
@@ -7,12 +7,12 @@
     overflow: hidden;
     float: right;
     
-    input b:after {
+    b {
+        -webkit-transition-duration: .25s;
         background: url(../img/ui/switch.png);
         height: 28px;
         width: 149px;
         display: block;
-        -webkit-transition-duration: .25s;
         -webkit-transform: translate3d(0, 0, 0);
     }
     
