--- a/_source/css/sass/styles.scss
+++ b/_source/css/sass/styles.scss
@@ -32,10 +32,21 @@ p {
 // Header
 
 #header {
-    padding: 1.8em .8em;
+    padding: 1.8em 1em;
     text-align: left;
+    color: $subColor1;
+    z-index: 9999;
+    box-shadow: 1px 2px 2px rgba(0, 0, 0, .1);        
+    position: fixed;
+    top:0;
+    font-weight: bold ;
     @include background(linear-gradient($domColor1C, $domColor1B)); 
     border: 1px solid $domColor1B;
+    nav {
+        position: absolute;
+        margin-top: 0;
+        top: 2.3em;
+    }
     nav a {
         color: $subColor1;
         border: 0;
@@ -43,9 +54,15 @@ p {
         padding: .5em 1em;
         width: auto;
         display: inline;
-        @include background(linear-gradient(lighten($domColor1C, 5%), lighten($domColor1B, 5%))); 
+        background: rgba(255, 255, 255, .1);
         @include border-radius(.2em);
         @include box-shadow(0px 1px 1px rgba(0,0,0,.2));
+    }
+    h1 {
+         @include domType1;
+         text-align: center;
+         font-size: 2.6em;
+         letter-spacing: -0.07em;
     }
 }
 
