--- a/_source/html/index.haml
+++ b/_source/html/index.haml
@@ -8,11 +8,11 @@
     %script{:src=>"js/type.js",:type=>"text/javascript"}
     %script{:src=>"js/ui.js",:type=>"text/javascript"}
     %script{:src=>"js/nav.js",:type=>"text/javascript"}
-    %script{:src=>"js/geo.js",:type=>"text/javascript"}
+    / %script{:src=>"js/geo.js",:type=>"text/javascript"}
 %body.main
 
     #header
-    
+        %h1 Mootor demo
         %nav
             %a.nav{:href=>"", :rel=>"back"} Back
 
@@ -52,10 +52,9 @@
             
         .panel#geolocalization
             %h2 Geolocalization
-            #location 
+            %h3 This module is not activated. See $.geolocation
             %h3#msg
             #error
-            #map.hidden
 
         .panel#data
             %h2 Data
@@ -102,17 +101,13 @@
            // Checkbox
            var check = $("#checkbox1").checkbox();
             
-           // Show location map
-           $("#location").location({
+           // Show location
+           /*$("#location").geolocation({
                 error: "error",
                 msg: "msg",
                 msgLoading: "<p>Wait please ...</p>",
-                msgFound: "",
-                map: "map",
-                // Sample data
-                dataNearby:  "data/sample.xml",
-                msgNearby: 'The near point is: $info ($distance km)'
-           });
+                msgFound: "$coords",
+           });*/
 
  
        });
