BDD tests, HTML5 update on index.haml, Core bugfix (hasClass)

--- a/_source/html/index.haml
+++ b/_source/html/index.haml
@@ -11,7 +11,7 @@
     / %script{:src=>"js/geo.js",:type=>"text/javascript"}
 %body.main
 
-    #header
+    %header#header
         %h1 Mootor demo
         %nav
             %a.nav{:href=>"", :rel=>"back"} Back
