--- a/index.haml
+++ b/index.haml
@@ -3,6 +3,7 @@
 %head
     %title Mootor demo
     %meta{:name=>"viewport", :content=>"initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"}
+    %link{:href=>"css/mootor.css", :media=>"screen",  :rel=>"stylesheet"}
     %link{:href=>"css/styles.css", :media=>"screen",  :rel=>"stylesheet"}
     %script{:src=>"js/mootor.js",:type=>"text/javascript"}
     %script{:src=>"js/type.js",:type=>"text/javascript"}
