--- a/_source/css/sass/_text.scss
+++ b/_source/css/sass/_text.scss
@@ -1,6 +1,6 @@
-$base-line-height: 140% ; 
-$base-letter-spacing: -0.05em ; 
-$base-font: arial ; 
+$base-line-height: 140%; 
+$base-letter-spacing: -0.05em; 
+$base-font: "Helvetica, Arial, sans-serif"; 
 $base-font-size: 62.5%;
 
 body { 
@@ -25,24 +25,22 @@ body {
 }
 @mixin empType1 {
   @include baseType;
-  font-family: helvetica, arial ;
   font-size: 7em ;
   letter-spacing: $base-letter-spacing*1.5;
 }
-@mixin readlyType {
+@mixin readableType {
   @include baseType;
   font-size: 3em ;
   text-align: justify;
   padding: 1em ;
   line-height: 150%;
-  font-family: georgia, arial ;
+  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
   letter-spacing: 0;
 }
 
 // Type 2
 @mixin empType2 { 
    @include baseType;
-   font-family: helvetica, arial ;
    font-size: 4em;
    text-decoration: none;
    text-shadow: 0px 0px 1px $text1;
@@ -55,7 +53,7 @@ h3 {
   @include subType1;
 }
 p {
-  @include readlyType;
+  @include readableType;
 }
 
 
