--- a/_source/css/sass/mootor.scss
+++ b/_source/css/sass/mootor.scss
@@ -9,12 +9,6 @@
     text-decoration: none ;
 }
 
-a,
-a:hover,
-a:focus {
-    -webkit-tap-highlight-color: rgba(255, 255, 255, 0); 
-}
-
 // Header
 
 #header {
@@ -41,10 +35,18 @@ a:focus {
     }
 }
 
-// Nav
+// Hacks
 
 #panels .panel {
+    // Prevents flicker on transform3d (iOS)
     -webkit-transition-duration:0;
     -webkit-transform:translate3d(0,0,0);
+}
+
+a,
+a:hover,
+a:focus {
+    // No decorations on anchors (Android) 
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0); 
 }
 
