correcciones sobre estilos generales

--- a/_source/css/sass/_colors.scss
+++ b/_source/css/sass/_colors.scss
@@ -2,27 +2,27 @@
 
 // Dominants
 
-$domColor1: #000;              // black
+$domColor1: #000;             // black
 $domColor1B: #333;            // grey
 $domColor1C: #666;            // light gray
 
 // Subordinated
 
-$subColor1: #fff;                  // white
-$subColor1B: #f7f7f7;          // lighter gray
-$subColor1C: #ddd   ;          // light gray
+$subColor1: #FFF;            // white
+$subColor1B: #f7f7f7;        // lighter gray
+$subColor1C: #DDD;           // light gray
 $subColor2: #7BBED6;         // light blue
 $subColor3: #F7D77B;         // yellow
 $subColor4: #EFDFCE;         // light yellow
 
 // Emphasis
 
-$empColor1: #FF3031;        // light red
+$empColor1: #FF3031;       // light red
 $empColor1B: #911E17;      // red
-$empColor2: #5FBCF9;        // lighter blue
+$empColor2: #5FBCF9;       // lighter blue
 $empColor2B: #29A6F7;      // light blue
 
 // System
 
-$bodyColor: #333;              // gray
+$bodyColor: #333;          // gray
 
