--- a/_source/css/sass/mootor.scss
+++ b/_source/css/sass/mootor.scss
@@ -9,6 +9,10 @@
     text-decoration: none ;
 }
 
+body {
+    background: #000;
+}
+
 // Header
 
 #header {
@@ -28,17 +32,26 @@
         display: inline;
     }
     h1 {
-         @include domType1;
-         text-align: center;
-         font-size: 2.6em;
-         letter-spacing: -0.07em;
+        @include domType1;
+        text-align: center;
+        font-size: 2.6em;
+        letter-spacing: -0.07em;
     }
+}
+
+#panels .panel {
+    width: 100%;
+    max-width: 100%;
+}
+
+#panels {
+    width: 100%;
 }
 
 // Hacks
 
 #panels .panel {
-    // Prevents flicker on transform3d (iOS)
+    // Prevents flicker on transform3d (iOS)    
     -webkit-transition-duration:0;
     -webkit-transform:translate3d(0,0,0);
 }
@@ -49,4 +62,3 @@ a:focus {
     // No decorations on anchors (Android) 
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0); 
 }
-
